<resources>
    <string name="app_name" translatable="false">Closer</string>
    <string name="notification_channel" translatable="false">notifications</string>
    <string name="call_notification_channel" translatable="false">notifications_call</string>
    <string name="reply">Reply</string>
    <string name="update">Update</string>
    <string name="closer_notifications">Closer notifications</string>
    <string name="what_s_up">Your status message</string>
    <string name="public_status">Your status</string>
    <string name="person_s_status">%1$s\'s status</string>
    <string name="update_your_name">Update your name</string>
    <string name="your_name_here">Your name here</string>
    <string name="set_name">Set name</string>
    <string name="add_a_name">Add a name…</string>
    <string name="message_not_sent">Couldn\'t send message</string>
    <string name="network_down">Network unavailable</string>
    <string name="get_directions">Get directions</string>
    <string name="go_out_with">Go out with…</string>
    <string name="close_messages">Close messages</string>
    <string name="say_something">Talk…</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="enter_code">Enter the code…</string>
    <string name="verify_number">Verify number</string>
    <string name="create_group">Add group</string>
    <string name="create_private_group">Add members group</string>
    <string name="create_public_group">Add group</string>
    <string name="enter_group_name">Name this group</string>
    <string name="enter_place_name">Name this place</string>
    <string name="wait_for_it">Wait for it…</string>
    <string name="phone_number_or_name">Invite by phone number or name</string>
    <string name="show_contacts">Search phone contacts</string>
    <string name="send_code">Send code</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="phone_number_hint">(000) 000-0000</string>
    <string name="number_verified">Your phone number has been verified.</string>
    <string name="welcome_to_closer">Welcome to Closer!</string>
    <string name="close">Close</string>
    <string name="unknown">Unknown</string>
    <string name="make_suggestion">Describe the suggestion</string>
    <string name="add_a_suggestion">Add a suggestion</string>
    <string name="add_suggestion">Add suggestion</string>
    <string name="add_new_private_group">Add a members group</string>
    <string name="add_new_public_place">Add a place</string>
    <string name="add_new_private_place">Add a members place</string>
    <string name="add_new_public_group">Add a community</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="not_found">Not found</string>
    <string name="invite">Invite</string>
    <string name="automatic">You will be automatically added to groups you\'ve already been invited to.</string>
    <string name="yaay">Yaaay!</string>
    <string name="resend_code">Re-send code</string>
    <string name="oh_no">Oh no!</string>
    <string name="number_not_verified">Your number could not be verified.</string>
    <string name="leave_group_action">Leave this group…</string>
    <string name="leave_group">Yes, leave %1$s</string>
    <string name="leave_private_group_message">After leaving this group, you will need to be invited again to re-join.</string>
    <string name="leave_public_group_message">You can re-join at any time.</string>
    <string name="leave_group_title">Leave %1$s?</string>
    <string name="ok">Ok</string>
    <string name="group_no_more">%1$s no more</string>
    <string name="that_didnt_work">That didn\'t work</string>
    <string name="add_phone_name">Invite %1$s</string>
    <string name="add_phone_to_group">Invite %1$s to %2$s?</string>
    <string name="phone_invited">%1$s has been invited to %2$s</string>
    <string name="sync_didnt_work">Sync didn\'t work</string>
    <string name="boo">Boo</string>
    <string name="add_contact">+ Invite</string>
    <string name="contact_invited_inline">%1$s (invited)</string>
    <string name="invite_by_phone">Invite by phone</string>
    <string name="invite_to_group">Invite to %1$s?</string>
    <string name="send_message">Send message</string>
    <string name="invite_by_phone_name_info">If you\'d like, add their name so others in the group know who you\'re inviting.</string>
    <string name="set_name_optional_info">If you\'d like, update your name so others in the group know who you are.</string>
    <string name="no_name">No name</string>
    <string name="skip">Skip</string>
    <string name="invited_to_group_notification">%1$s added you to %2$s</string>
    <string name="group_message_notification">%1$s (%2$s)</string>
    <string name="group_message_reaction_notification_in">%1$s reacted to your message in %2$s</string>
    <string name="group_message_reaction_notification">%1$s reacted to your message</string>
    <string name="invited">Invited</string>
    <string name="cancel_invite">Cancel invite</string>
    <string name="confirm_cancel_invite">Cancel %1$s\'s invite?</string>
    <string name="invite_cancelled">Invite cancelled</string>
    <string name="shared_location">Shared location</string>
    <string name="show_on_map">Show on map</string>
    <string name="phone_shared_a_suggestion">%1$s shared a suggestion</string>
    <string name="phone_shared_an_event">%1$s shared an event</string>
    <string name="phone_shared_a_group">%1$s shared a group</string>
    <string name="phone_shared_a_location">%1$s shared a location</string>
    <string name="phone_shared_a_photo">%1$s shared a photo</string>
    <string name="phone_shared_a_story">%1$s shared a story</string>
    <string name="phone_shared_a_post">%1$s shared a post</string>
    <string name="just_now">Just now</string>
    <string name="use_your_location">Use your location</string>
    <string name="enable_location_permission">Enable location permission</string>
    <string name="open_settings">Open settings</string>
    <string name="enable_location_permission_rationale">Open your system settings for Closer, tap on Permissions, and then turn on Location.</string>
    <string name="enable_contacts_permission_rationale">Open your system settings for Closer, tap on Permissions, and then turn on Contacts.</string>
    <string name="show_help">Show help</string>
    <string name="you_hid_the_help_bubble">Congrats, you hid the help bubble!</string>
    <string name="search_public_groups_hint">Search groups</string>
    <string name="search_events_hint">Search events</string>
    <string name="search_groups">Search groups</string>
    <string name="open_group">Open group</string>
    <string name="tell_more_about_group">This group is about…</string>
    <string name="tell_more_about_group_action">More about this activity…</string>
    <string name="message_sent">Message sent</string>
    <string name="message_sent_to_x">Message sent to %1$s</string>
    <string name="no_suggestions_here">I couldn\'t find any suggestions here</string>
    <string name="no_more_results">I couldn\'t find anything else. Tap again to restart the search.</string>
    <string name="no_results">I couldn\'t find anything</string>
    <string name="enter_event_details">Describe the event</string>
    <string name="enter_event_price">Price (optional)</string>
    <string name="view">View</string>
    <string name="event_start_end_day">%1$s — %2$s</string>
    <string name="event_start_end_time">%1$s — %2$s %3$s</string>
    <string name="event_start_end_time_multiday">%1$s %2$s — %3$s %4$s</string>
    <string name="event_price_and_time">%1$s, %2$s</string>
    <string name="event_happening_now">%1$s (Happening now)</string>
    <string name="event_happening_all_day">%1$s (Happening all day)</string>
    <string name="cancelled">Cancelled</string>
    <string name="event">Event</string>
    <string name="open_event">Open event</string>
    <string name="event_cancelled">%1$s has been cancelled</string>
    <string name="cancel_event">Cancel event</string>
    <string name="event_will_be_cancelled">%1$s will be cancelled</string>
    <string name="event_notification_starts">%1$s starts %2$s</string>
    <string name="event_notification_started">%1$s started %2$s</string>
    <string name="event_notification_ends">%1$s ends %2$s</string>
    <string name="event_notification_ended">%1$s ended %2$s</string>
    <string name="event_must_not_end_in_the_past">Event must not end in the past</string>
    <string name="enable_contacts_permission">Enable contacts permission</string>
    <string name="photo">Photo</string>
    <string name="talk">Talk</string>
    <string name="talk_here">Talk here</string>
    <string name="settings">Settings</string>
    <string name="event_must_not_end_before_it_starts">Event must not end before it starts</string>
    <string name="set_background">Set background</string>
    <string name="mute">Mute Closer</string>
    <string name="mute_notifications">Mute notifications</string>
    <string name="unmute_notifications">Unmute notifications</string>
    <string name="notifications_on">Notifications on</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="more_options">More options</string>
    <string name="share_with">Share with</string>
    <string name="set_my_name">Update your profile</string>
    <string name="add_an_action">Add an activity</string>
    <string name="add_action">Add activity</string>
    <string name="action_intent">Add message text</string>
    <string name="action_intent_hint">went into the cave</string>
    <string name="action_name_hint">Activity name</string>
    <string name="enter_a_name_and_intent">Missing name or message text</string>
    <string name="remove_action">Remove this activity</string>
    <string name="remove_action_message">Remove \"%1$s\" from this group?</string>
    <string name="add_a_comment">Add a comment…</string>
    <string name="nope">Nope</string>
    <string name="and">and</string>
    <string name="take_photo">Take photo</string>
    <string name="upload_photo">Upload photo</string>
    <string name="uploading_photo">Uploading photo…</string>
    <string name="remove_action_menu_item">Remove from group…</string>
    <string name="settings_open_groups_expanded">Open groups expanded</string>
    <string name="send_feedback">Send us feedback</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="group_settings">Group settings</string>
    <string name="introduction">Introduction</string>
    <string name="offtime">Favorite pastimes</string>
    <string name="history">History</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="goals">Goals</string>
    <string name="nothing_here">There\'s nothing here</string>
    <string name="edit_your_introduction">Edit your introduction</string>
    <string name="edit_your_history">Edit your history</string>
    <string name="edit_your_offtime">Edit your pastime</string>
    <string name="add_a_lifestyle">Join a lifestyle</string>
    <string name="add_a_goal">Add a goal</string>
    <string name="occupations">Preoccupations</string>
    <string name="edit_your_occupation">Edit your preoccupations</string>
    <string name="phone_verified">Phone verified</string>
    <string name="skippable">Include skip option</string>
    <string name="use_options">Use options</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="option_3_optional">Option 3 (optional)</string>
    <string name="no_comment">Don\'t show comment box</string>
    <string name="number_of_days">Number of days</string>
    <string name="days">Days</string>
    <string name="weeks">Weeks</string>
    <string name="months">Months</string>
</resources>