<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/takePhotoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="@dimen/padDouble"
                android:text="@string/take_photo"
                android:textColor="@color/textInverse"
                android:drawablePadding="@dimen/pad"
                android:drawableStart="@drawable/ic_camera_black_24dp"
                android:drawableTint="@color/textInverse"
                android:background="@drawable/clickable_accent_flat" />

            <TextView
                android:id="@+id/uploadPhotoButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="@dimen/padDouble"
                android:text="@string/upload_photo"
                android:textColor="@color/textInverse"
                android:drawablePadding="@dimen/pad"
                android:drawableStart="@drawable/ic_photo_black_24dp"
                android:drawableTint="@color/textInverse"
                android:background="@drawable/clickable_accent_flat" />

            <TextView
                android:id="@+id/removeButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:padding="@dimen/padDouble"
                android:text="@string/remove_action_menu_item"
                android:textColor="@color/textInverse"
                android:background="@drawable/clickable_accent_flat"
                android:drawablePadding="@dimen/pad"
                android:drawableStart="@drawable/ic_close_black_24dp"
                android:drawableTint="@color/textInverse" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>